clusters/mothership/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
  generation: 2
  labels:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd
  name: argocd-ingres
  namespace: argocd
spec:
  rules:
  - host: argocd.leetserve.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.leetserve.com
    secretName: argocd-tls
